Adjust font-size to make better sense for quotes

--- a/medi7100codecentre.html
+++ b/medi7100codecentre.html
@@ -1037,12 +1037,8 @@
                                 <div class="row">
                                     <div class="col-lg">
                                 <div class="form-check form-check-inline" id="alertFontSize" onchange="generateAlertCode()">
-                                    <input class="form-check-input" name="alertFontSize" id="alertFontSizeNormal" type="radio" value="" checked>
+                                    <input class="form-check-input" name="alertFontSize" id="alertFontSizeNormal" type="radio" value="fs-5" checked>
                                     <label class="form-check-label" for="alertFontSizeNormal">Normal</label>
-                                </div>
-                                <div class="form-check form-check-inline" id="alertFontSize" onchange="generateAlertCode()">
-                                    <input class="form-check-input" name="alertFontSize" id="alertFontSize5" type="radio" value="fs-5">
-                                    <label class="form-check-label" for="alertFontSize5"><span class="fs-5">Small</span></label>
                                 </div>
                                 <div class="form-check form-check-inline" id="alertFontSize" onchange="generateAlertCode()">
                                     <input class="form-check-input" name="alertFontSize" id="alertFontSize4" type="radio" value="fs-4">
